--- a/src/index.scss
+++ b/src/index.scss
@@ -21,7 +21,6 @@
   padding: 0;
   box-sizing: border-box;
 
-  scrollbar-gutter: stable;
 }
 
 html {
